# adam-os-control-center

./: .build_epoch  .gitignore  API_CONTRACT.md  BUILDSTAMP  Dockerfile  Makefile  README.md  captain-definition  database.py  main.py  requirements.txt  scanner.py
backend/: config.json  pyproject.toml
backend/app/: main.py  settings.py
backend/app/api/: agents.py  apis.py  config.py  console.py  control.py  events.py  files.py  health.py  infra.py  keys.py  organs.py  pipeline.py  tokens.py
backend/app/core/: cache.py  db.py  pubsub.py  schema_ext.sql
backend/app/models/: schemas.py
backend/app/services/: agent_tracker.py  api_registry.py  command_center.py  config_service.py  file_tree.py  hermes_bridge.py  infra_reader.py  keys_manager.py  log_streamer.py  pipeline_service.py  snapshots.py  token_tracker.py
backend/seed/: api_keys.json  state.db
backend/tests/: conftest.py  test_api.py  test_services.py
data/: dashboard.db
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: AgentFleet.svelte  ControlCenter.svelte  HealthRing.svelte  InfraPanel.svelte  MetricBadge.svelte  MissionConsole.svelte  OrganGraph.svelte  OrganismBody.svelte  PipelineView.svelte  StatusBar.svelte  Timeline.svelte  TopBar.svelte
frontend/src/lib/stores/: agents.ts  console.ts  infra.ts  organism.ts  pipeline.ts  sse.ts  ui.ts
frontend/src/lib/utils/: colors.ts  (+1 more)
frontend/src/routes/: +layout.svelte  +page.svelte
scripts/: build_frontend.sh  deploy.sh  dev.sh  run_backend.sh
static/: index.html
