[project]
name = "adam-os-dashboard-api"
version = "1.0.0"
description = "ADAM OS Dashboard FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.116.0",
    "uvicorn[standard]>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
